# awan

./: .env.example  .gitignore  Cargo.toml  PROPOSAL.md  README.md  data.json  package.json
client/: package.json
client/containers/: header.tsx  layout.tsx  styles.ts
client/hooks/: useDebounce.ts
client/pages/: _app.tsx  _document.tsx  index.tsx  styles.ts
client/pages/presignedurl/: index.tsx
client/pages/upload/: index.tsx
client/services/: changefile.ts  download.ts
client/utils/: string.ts
server/: Cargo.toml  cli.rs  main.rs  pool.rs  types.rs
server/api/routes/: mod.rs  s3.rs  s3_objects.rs
server/lib/: cli.rs  mod.rs  s3.rs  system_io.rs  types.rs
server/src/: cli.rs  main.rs  pool.rs  types.rs
server/src/api/routes/: s3.rs
server/src/utils/: generic.rs  logger.rs  mod.rs  s3.rs
server/utils/: cli.rs  mod.rs  s3.rs
src/: main.rs
src/lib/: cli.rs  helper.rs  mod.rs
