[package]
name = "rust-aws-s3"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
path = "server/main.rs" 
crate-type = ["lib"]

[[bin]]
name = "server"
path = "server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# server/backend
actix = "0.12"
actix-web = "3.3.3"
rust-s3 = "0.27"

# environments
dotenv = "0.9.0"
