[package]
name = "rust-aws-s3"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
path = "server/main.rs" 
crate-type = ["lib"]

[[bin]]
name = "server"
path = "server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# server/backend
actix = "0.12"
actix-web = "3.3.3"
actix-cors = "0.5.4"
rust-s3 = "0.27"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
env_logger = "0.9.0"
serde = "1.0.132"

# environments
dotenv = "0.9.0"
