[package]
name = "server"
version = "0.1.0"
authors = ["Alfin Surya <alfins132@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# server/backend
actix = "0.12"
actix-web = "3.3.3"
actix-cors = "0.5.4"
rust-s3 = "0.27"
tokio = { version = "1.15.0", features = ["full"] }
serde_json = "1.0"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = { version ="0.4.19", features = ["serde"] }
anyhow = "1.0"
serde_with = "1.11.0"

# environments
dotenv = "0.9.0"
